# agent-foreman

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYREADME.md  LICENSE  README.md  README.zh-CN.md  config.example.yaml  foreman.spec  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
deploy/: README.md  bootstrap.sh  foreman.service  harden_config.py  remote_deploy.sh
design_handoff/ui/: README.md
design_handoff/ui/project/: .thumbnail  Foreman Redesign.dc.html
docs/: ARCHITECTURE.md  AUTODEV_LOOP.md  CODEX_STYLE_CONTEXT_COMPACTION_DESIGN.zh-CN.md  CONTEXT_V2_BASELINE.zh-CN.md  CONTEXT_V2_IMPLEMENTATION_TASKS.zh-CN.md  COPILOT_CLI_AGENT_PLAN.zh-CN.md  DESIGN.zh-CN.md  PM_PLAN_TERMINATION_DESIGN.md  PM_TERMINATION_E2E_PLAYBOOK.md  PM_TOOL_RUNTIME_RESEARCH_PLAN.md  REMOTE_CONTROL_DOWNLINK_DESIGN.md  REMOTE_CONTROL_LINK_DESIGN.md  ROADMAP.md  SECURITY.md  TASKS.md  USAGE.md  USAGE.zh-CN.md  VERSION_HISTORY.md  WORK_MODE_EFFECTIVE_INTEGRATION_DESIGN.md
docs/work-mode-impl/: 00-OVERVIEW-AND-SEQUENCING.md  01-REVIEW-FINDINGS.md  10-P0-copy-and-L0-metadata.md  20-P1-L1-retrieval-budget-telemetry.md  30-P1b-llm-debug-trace.md  31-P1b-unified-context-compression.md  40-P2-coding-agent-channel.md  50-P3-tool-rag-upgrade.md  60-P4-hard-enforcement.md  70-P5-workflow-control-flow.md  90-conventions-and-glossary.md
e2e-test-report/: focus.ps1  grab.ps1  report.md  回归测试报告-2026-06-24.md  测试问题记录.md
experiments/pm_browser_runtime/: README.md  pm_browser_runtime_experiment.py  provider_browser_llm_experiment.py  test_pm_browser_runtime_experiment.py
experiments/pm_browser_runtime/results/: 2026-06-23-gpt-5.5-browser-runtime-experiment.json  2026-06-23-gpt-5.5-browser-runtime-experiment.md
experiments/pm_tool_runtime/: README.md  pm_tool_runtime_experiment.py  provider_llm_tool_experiment.py  test_pm_tool_runtime_experiment.py
experiments/pm_tool_runtime/results/: 2026-06-23-claude-opus-protocol-probe.md  2026-06-23-gpt-5.5-all-tools-provider-experiment.json  2026-06-23-gpt-5.5-all-tools-provider-experiment.md
hooks/: claude-hooks.example.json
packaging/: foreman_app.py
scripts/: accept_devices_panel.py  e2e_prompt.md  e2e_serve.py  gen_definition_key.py  gen_vapid.py  seed_demo.py
src/foreman/: __init__.py  __main__.py  config.py
src/foreman/agents/: __init__.py  base.py  claude_code.py  codex.py  runner.py
src/foreman/client/: __init__.py  cache_sync.py  dispatch.py  local_app.py  relay.py  splash.py  update.py
src/foreman/client/agents/: _subprocess.py  base.py  claude_code.py  codex.py  copilot_cli.py  runner.py
src/foreman/client/computer_use/: __init__.py  toolbelt.py
src/foreman/client/core/: auditor.py  brain.py  briefing.py  cards.py  checkpoint.py  cloud.py  context_budget.py  context_compression.py  context_v2.py  decision_loop.py  definition_service.py  description_backfill.py  dispatch_service.py  examples.py  gate.py  injector.py  operator.py  pm_agent.py  pm_contract.py  qa_review.py  reviewer.py  scheduler.py  supervisor.py  work_mode_context.py  workflow_engine.py
src/foreman/client/monitor/: git_watch.py  hooks.py  process.py  progress.py
src/foreman/client/store/: __init__.py  db.py  migrations.py  models.py
src/foreman/client/tools/: __init__.py  browser.py  loop.py  models.py  policy.py  runtime.py
src/foreman/core/: __init__.py  auditor.py  brain.py  checkpoint.py  events.py  gate.py  reviewer.py  scheduler.py
src/foreman/examples/: __init__.py
src/foreman/examples/definitions/: README.md  manifest.yaml
src/foreman/examples/definitions/code_standard/: python-style.md  test-naming.md
src/foreman/examples/definitions/qa_rubric/: covers-happy-path.yaml  lint-passes.yaml  meets-standard-no-shortcuts.yaml
src/foreman/examples/definitions/skill/: implementation-notes.md  write-tests.md
src/foreman/examples/definitions/workflow/: add-feature.yaml
src/foreman/llm/: __init__.py  client.py
src/foreman/monitor/: __init__.py  git_watch.py  hooks.py  process.py
src/foreman/server/: __init__.py  app.py  auth.py  auth_manager.py  display_cache.py  logbuffer.py  push.py  relay.py
src/foreman/server/store/: __init__.py  db.py  migrations.py  models.py
src/foreman/server/web/: admin-app.js  admin.html  admin.js  app-context.js  app-core.js  app-timeline.js  app.css  app.html  app.js  index-redirect.js  index.html  keys.html  keys.js  manifest.webmanifest  redeem.html  redeem.js  sw.js
src/foreman/shared/: __init__.py  autonomy.py  config.py  crypto.py  events.py  i18n.py  jsonscan.py  migrations.py  notify.py  protocol.py  ratelimit.py
src/foreman/shared/llm/: __init__.py  client.py  trace.py
src/foreman/store/: db.py  models.py
tests/: _fakes.py  test_access_guard.py  test_admin_console.py  test_admin_dashboard.py  test_auditor.py  test_auth.py  test_autonomy.py  test_briefing.py  test_cards.py  test_checkpoint.py  test_claude_adapter.py  test_cli.py  test_client.py  test_client_store.py  test_cloud.py  test_codex_adapter.py  test_context_compression.py  test_context_p1b.py  test_context_v2_active_context.py  test_context_v2_api.py  test_context_v2_budget.py  test_context_v2_checkpoint.py  test_context_v2_dispatch.py  test_context_v2_frames.py  test_context_v2_realistic_session.py  test_context_v2_runtime.py  test_context_v2_store.py  test_context_v2_subagents.py  test_copilot_adapter.py  test_crypto.py  test_decision_loop.py  test_definition_export.py  test_definition_service.py  test_definitions_api.py  test_definitions_store.py  test_deploy_hardening.py  test_description_backfill.py  test_dispatch.py  test_dispatch_api.py  test_dispatch_service.py  (+53 more)
web/: app.css  app.js  index.html  sw.js
