[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-foreman"
version = "0.1.0"
description = "A self-hosted PM agent that supervises local coding agents (Claude Code / Codex) and reports to your phone."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "simplerjiang" }]
keywords = ["agent", "claude-code", "codex", "pm", "automation", "webpush", "pwa"]

# Base = shared layer + CLI; BOTH deployables need these. Per-side deps live in extras below
# (DESIGN §14: client = PC app, server = relay+PWA). Install: client -> .[client], server -> .[server].
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# PC app (personal mode): drives agents, local web UI, local store, monitor, watchdog, window/tray.
client = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "watchfiles>=0.21",
    "psutil>=5.9",
    "pywebview>=5.0",
    "pystray>=0.19",
]
# Team server: relay + REST/WS + display-cache store + Web Push.
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pywebpush>=2.0",
    "py-vapid>=1.9",
]
# Interactive (PTY) driving of agents; headless mode does not require these.
pty = ["pywinpty>=2.0; sys_platform == 'win32'", "ptyprocess>=0.7; sys_platform != 'win32'"]
# Dev/test: the full suite imports both sides, so install `.[client,server,dev]`.
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
foreman = "foreman.__main__:app"

[project.urls]
Homepage = "https://github.com/simplerjiang/agent-foreman"
Design = "https://github.com/simplerjiang/agent-foreman/blob/main/docs/DESIGN.zh-CN.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
