[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-foreman"
# Single source of truth for the version = src/foreman/__init__.py::__version__ (AGENTS.md §四).
# setuptools reads it dynamically (see [tool.setuptools.dynamic]) — never hardcode the version twice.
dynamic = ["version"]
description = "A self-hosted PM agent that supervises local coding agents (Claude Code / Codex) and reports to your phone."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "simplerjiang" }]
keywords = ["agent", "claude-code", "codex", "pm", "automation", "webpush", "pwa"]

# Base = shared layer + CLI; BOTH deployables need these. Per-side deps live in extras below
# (DESIGN §14: client = PC app, server = relay+PWA). Install: client -> .[client], server -> .[server].
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# PC app (personal mode): drives agents, local web UI, local store, monitor, watchdog, window/tray.
client = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "watchfiles>=0.21",
    "psutil>=5.9",
    "pywebview>=5.0",
    "pystray>=0.19",
    "websockets>=12.0",  # outbound wss dialer to the team relay (DESIGN §8.5; lazily imported)
    "cryptography>=42.0",  # optional at-rest encryption of definition bodies (DESIGN §765, T6.2)
    "playwright>=1.40",
]
# Team server: relay + REST/WS + TTL notification queue + Web Push.
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pywebpush>=2.0",
    "py-vapid>=1.9",
]
# Interactive (PTY) driving of agents; headless mode does not require these.
pty = ["pywinpty>=2.0; sys_platform == 'win32'", "ptyprocess>=0.7; sys_platform != 'win32'"]
# Dev/test: the full suite imports both sides, so install `.[client,server,dev]`.
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
foreman = "foreman.__main__:app"

# Third-party notification channels auto-load from this entry-point group on startup (DESIGN §777,
# T6.3). A plugin package `foreman-plugin-xxx` registers a factory `(config) -> Notifier | None`:
#   [project.entry-points."foreman.notifiers"]
#   slack = "foreman_plugin_slack:from_config"
# Built-in channels (feishu / telegram / bark / email) are loaded directly, not via this group, so
# core notifications work without a (re)install — see foreman.shared.notify.BUILTIN_NOTIFIER_FACTORIES.

[project.urls]
Homepage = "https://github.com/simplerjiang/agent-foreman"
Design = "https://github.com/simplerjiang/agent-foreman/blob/main/docs/DESIGN.zh-CN.md"

[tool.setuptools.packages.find]
where = ["src"]

# Version is read from the package's __version__ — the ONE place a PR bumps (AGENTS.md §四).
[tool.setuptools.dynamic]
version = { attr = "foreman.__version__" }

# Ship the built-in starter definitions (T6.4) as package data so they're available at runtime
# (importlib.resources) in both source and wheel installs. Generic, redacted — no secrets.
[tool.setuptools.package-data]
"foreman.examples" = [
    "definitions/*.yaml",
    "definitions/*.md",
    "definitions/*/*.yaml",
    "definitions/*/*.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
# Optional/native deps without bundled type stubs (desktop window, web push, vapid, the wss dialer).
# Foreman drives these dynamically; their absence of stubs shouldn't fail the type gate.
ignore_missing_imports = true
# The wiring seam (DESIGN §14) injects duck-typed collaborators so server.app never imports client
# types. Those params are annotated `Any` (intentionally dynamic), so mypy stays honest about the
# rest of the code while not flagging the injection boundary. Run as `mypy src`.

[[tool.mypy.overrides]]
# SQLModel's metaclass confuses mypy's attribute resolution on the table classes (`__table__`).
module = ["foreman.server.store.db", "foreman.server.store.models"]
disable_error_code = ["union-attr", "attr-defined"]
